add styling to login page

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -8,6 +8,8 @@ body {
     font-family: Helvetica, Arial, sans-serif;
     font-size: $m-size;
     background-color: white;
+    color: $dark-grey;
+    line-height: 1.6;
 }
 
 button {
